--- a/Ch3/3-13案例研究-超链接提示和图片提示效果/2-2-图片提示-第二步.html
+++ b/Ch3/3-13案例研究-超链接提示和图片提示效果/2-2-图片提示-第二步.html
@@ -71,7 +71,7 @@ $(function(){
 <body>
 <h3>有效果：</h3>
 	<ul>
-		<li><a href="images/apple_1_bigger.jpg" class="tooltip" title="苹果 iPod"><img src="images/apple_1.jpg" alt="苹果 iPod" /></a></li>
+		<li><a href="images/apple_1_bigger.jpg" class="tooltip" title=""><img src="images/apple_1.jpg" alt="苹果 iPod" /></a></li>
 		<li><a href="images/apple_2_bigger.jpg" class="tooltip" title="苹果 iPod nano"><img src="images/apple_2.jpg" alt="苹果 iPod nano"/></a></li>
 		<li><a href="images/apple_3_bigger.jpg" class="tooltip" title="苹果 iPhone"><img src="images/apple_3.jpg" alt="苹果 iPhone"/></a></li>
 		<li><a href="images/apple_4_bigger.jpg" class="tooltip" title="苹果 Mac"><img src="images/apple_4.jpg" alt="苹果 Mac"/></a></li>
