--- a/Ch5/demo10-选项卡/demo2.html
+++ b/Ch5/demo10-选项卡/demo2.html
@@ -38,6 +38,19 @@
 		 <div class="hide">娱乐</div>
 	</div>
 </div>
-
+<div class="tab">
+	<div class="tab_menu">
+		<ul>
+			<li class="selected">时事</li>
+			<li>体育</li>
+			<li>娱乐</li>
+		</ul>
+	</div>
+	<div class="tab_box">
+		<div>时事</div>
+		<div class="hide">体育</div>
+		<div class="hide">娱乐</div>
+	</div>
+</div>
 </body>
 </html>
